[package]
name = "sortingoffice"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }

# Database
diesel = { version = "2.1", features = ["mysql", "chrono"] }
diesel_migrations = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine
askama = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
bcrypt = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Form handling
axum-extra = { version = "0.9", features = ["typed-header"] }

# Session management
axum-sessions = "0.5"

# CSRF protection
axum-csrf = "0.4"

[dev-dependencies]
tokio-test = "0.4" 
