[package]
name = "sortingoffice"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7.5"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }

# Database
diesel = { version = "2.2.11", features = ["mysql", "r2d2", "chrono", "numeric"] }
diesel_migrations = { version = "2.2.0", features = ["mysql"] }

# Serialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"

# Template engine
askama = "0.12.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.39", features = ["serde"] }

# Password hashing
bcrypt = "0.15.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15.7"

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Form handling
axum-extra = { version = "0.9", features = ["typed-header"] }

# Session management
axum-sessions = "0.5"

# CSRF protection
axum_csrf = "0.4"

# Bigdecimal
bigdecimal = { version = "0.4.5", features = ["serde"] }

# R2D2
r2d2 = "0.8.10"

[dev-dependencies]
tokio-test = "0.4"
serde_urlencoded = "0.7"
hyper = "1.0"

[workspace]
members = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort" 
