[package]
name = "sortingoffice"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tokio = { version = "1", features = ["full"] }

# Database
diesel = { version = "2.2.11", features = ["mysql", "r2d2", "chrono", "numeric"] }
diesel_migrations = { version = "2.2.0", features = ["mysql"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Template engine
askama = "0.14.0"

# Internationalization
# Using custom simple i18n implementation

# Error handling
anyhow = "1.0.98"
thiserror = "1.0.69"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Password hashing
bcrypt = "0.15.1"

# UUID generation
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15.7"

# HTTP client for external API calls
reqwest = { version = "0.11.27", features = ["json"] }

# Form handling
axum-extra = { version = "0.9.6", features = ["typed-header"] }

# Session management
axum-sessions = "0.5.0"

# CSRF protection
axum_csrf = "0.4.1"

# Bigdecimal
bigdecimal = { version = "0.4.8", features = ["serde"] }

# R2D2
r2d2 = "0.8.10"

[dev-dependencies]
tokio-test = "0.4"
serde_urlencoded = "0.7.1"
hyper = "1.6.0"
# UI Testing
fantoccini = "0.22.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[workspace]
members = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort" 
